--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,9 @@
     <string name="over">/</string>
     <string name="floating_button_des">Update user data</string>
     <string name="user_update_title">Update data</string>
+    <string name="total_step"> Total Steps</string>
+    <string name="average"> Average</string>
+    <string name="best"> Best</string>
+
+
 </resources>
