--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="south"> South</string>
     <string name="east"> East</string>
     <string name="west"> West</string>
+    <string name="zero">0</string>
 </resources>
